tests/tools/trip/randomTrips/errors/period_insertion_rate_conflict/options.tools
-n net.net.xml -s 42 --period 10 --insertion-rate 10
